--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "wildbit/swiftmailer-postmark": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
