--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "tsaiyihua/laravel-ecpay": "^2.2",
         "wildbit/swiftmailer-postmark": "^3.1"
     },
     "require-dev": {
